2015-10-04  Werner Lemberg  <wl@gnu.org>

	* Version 2.6.1 released.
	=========================


	Tag sources with `VER-2-6-1'.

	* README: Updated.
	* src/*.1: Updated.

2015-09-13  Werner Lemberg  <wl@gnu.org>

	* Makefile (FT_H): Updated to recent directory changes (#45954).

	The patch is taken from the anonymous Savannah bug report.

2015-08-13  Werner Lemberg  <wl@gnu.org>

	[ftcommon] Support named instances of GX variation fonts.

	* src/ftcommon.c (FTDemo_Install_Font): Add inner loop for named
	instances.

2015-08-05  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Avoid invalid left-shift of negative values.

	* src/ftgrid.c (grid_status_draw_outline): Don't use left-shift but
	multiplication.

2015-08-04  Werner Lemberg  <wl@gnu.org>

	* src/ftmulti.c (main): Fix double-free in case of invalid font.

2015-07-08  Werner Lemberg  <wl@gnu.org>

	[ftcommon] Improve loading of font collections.

	* src/ftcommon.c (FTDemo_Install_Font): Don't exit if first face of
	a font is invalid.
	Don't exit if we want outline fonts only and the first face isn't.
	Don't exit if there are problems with the cmap.

	In all three cases, simply skip the font face.

2015-06-07  Werner Lemberg  <wl@gnu.org>

	* Version 2.6 released.
	=======================


	Tag sources with `VER-2-6'.

	* README: Updated.
	* src/*.1: Updated.

	* Makefile: Omit a zero patch level in computation of `version'.

2015-06-06  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Key `D' now toggles display of point numbers.

	* src/ftgrid.c: Include FT_TRIGONOMETRY_H.
	(GridStatusRec): Add field `do_dotnumbers'.
	(grid_status_init): Updated.
	(grid_status_draw_outline): Implement point number display.
	(event_help): Updated.
	(Process_Event): Handle `D' key.
	(main): Updated.

2015-04-22  Werner Lemberg  <wl@gnu.org>

	* src/ftdiff.c (process_event): Add missing `break' statement.

2015-04-21  Werner Lemberg  <wl@gnu.org>

	[ftview] Key `w' now toggles warper (if compiled-in).
