@@ -6,21 +6,12 @@
 /*  D. Turner, R.Wilhelm, and W. Lemberg                                    */
 /*                                                                          */
 /*                                                                          */
-/*  aux.c - auxiliary routines for the FreeType demo programs.              */
+/*  output.c - string output routines for the FreeType demo programs.       */
 /*                                                                          */
 /****************************************************************************/
 
 
-#include "aux.h"
-
-
-  /*************************************************************************/
-  /*************************************************************************/
-  /*****                                                               *****/
-  /*****                    STRING OUTPUT FUNCTIONS                    *****/
-  /*****                                                               *****/
-  /*************************************************************************/
-  /*************************************************************************/
+#include "output.h"
 
 
   static char hexdigit[16] = {
